--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -148,8 +148,7 @@
         $(document).ready(function() {
             if($('#usernick').length) {
                 $('#usernick').on('click', function() {
-                    console.log('text');
-                    $('#my_page').css('display','block');
+                    $('#my_page').show();
                 });
             }
         });
