--- a/src/main/resources/templates/sendmessage.html
+++ b/src/main/resources/templates/sendmessage.html
@@ -42,12 +42,11 @@
 </div>
 
 <script th:inline="javascript">
-    document.getElementById('message-form').addEventListener('submit', function(event) {
-      event.preventDefault();
-      const recipient = document.getElementById('recipient').value;
-      const message = document.getElementById('message').value;
-
-       $.ajax({
+   $('#message-form').submit(function(event) {
+                              event.preventDefault();
+                              const recipient = $('#recipient').val();
+                              const message = $('#message').val();
+                              $.ajax({
                                 　　type:'post'
                                 　　, contentType:'application/json'
                                 　　, data: JSON.stringify({
@@ -60,7 +59,6 @@
                                        window.close();
                                 　　}
                                    , error:function(e) {
-
                                        alert(e.responseText);
                                 　　}
                          });
