--- a/src/main/resources/templates/mypagearticle.html
+++ b/src/main/resources/templates/mypagearticle.html
@@ -17,6 +17,9 @@
                     <a class="nav-link" href="/mypage?type=comment_list">작성한 댓글</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/mypage?type=bookmark_list">즐겨찾기</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/mypage?type=edit_profile">내 정보 수정</a>
                 </li>
             </ul>
