--- a/src/main/resources/templates/mypagebookmark.html
+++ b/src/main/resources/templates/mypagebookmark.html
@@ -37,7 +37,7 @@
                          <div style="
                          margin:0 auto;
                          width:600px" >
-                             <a th:href="@{/article/detail/{id}(id=${item.id})}" th:text="${item.title}">
+                             <a th:href="@{/article/detail/{id}(id=${item.id})}" th:text="${item.article_title}">
                              </a>
                          </div>
                      </div>
