--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -37,6 +37,9 @@
         <span class="article_addtext" th:text="${article.viewcount}"></span></br>
         <div class="list-group" style="position:absolute; display:none; margin-top:10px" id="noteSend_Window">
             <ul>
+                <a th:href="@{/mypage(userid=${article.member.id},type=article_list)}" class="list-group-item list-group-item-action">
+                    프로필
+                </a>
                 <li>
                     <a href="javascript:;" class="list-group-item list-group-item-action" id="open-message-btn">쪽지 보내기</a>
                 </li>
